--- a/css/style.css
+++ b/css/style.css
@@ -1,397 +1,16 @@
 @charset "UTF-8";
 /* * * * * * * * *
-*	base
-* * * * * * * * */
-*, *::before, *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-img {
-  max-width: 100%;
-}
-
-body {
-  color: #333;
-  font-family: 'PT Sans Caption','PT Sans','ヒラギノ角ゴ Pro W3',' Hiragino Kaku Gothic Pro', 'MeiryoUI', 'MSUIGothic', 'メイリオ', 'Meiryo', 'ＭＳＰゴシック', sans-serif;
-  line-height: 1.8;
-  letter-spacing: 0.5rem;
-  margin: 0;
-}
-
-.container {
-  max-width: 1920px;
-  margin: 0 auto;
-}
-
-.inner {
-  max-width: 1080px;
-  margin: 0 auto;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  cursor: pointer;
-  color: #333;
-}
-
-h2 {
-  font-size: 4.5rem;
-  margin-bottom: 30px;
-}
-
-/* * * * * * * * *
-*	reset
-* * * * * * * * */
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
-  padding: 0;
-}
-
-p {
-  margin: 0;
-  padding: 0;
-}
-
-img {
-  margin: 0;
-  padding: 0;
-  vertical-align: top;
-  max-width: 100%;
-}
-
-.sub_t {
-  font-size: 2rem;
-  letter-spacing: 1.2rem;
-  margin-bottom: 70px;
-}
-
-/* * * * * * * * *
 *	Sass 定義
 * * * * * * * * */
 /* * * * * * * * *
 *	header
 * * * * * * * * */
-header .inner .nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  height: 105px;
-}
-
-header .inner .nav h1 img {
-  width: 180px;
-  height: 60px;
-}
-
-.nav_li {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.nav_li ul {
-  font-size: 1.3rem;
-  font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.nav_li ul li {
-  position: relative;
-  margin-right: 30px;
-}
-
-.nav_li ul li a {
-  color: white;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.nav_li ul li a img {
-  width: 20px;
-}
-
-.insta_hov {
-  position: absolute;
-  left: 0;
-  top: 0;
-  opacity: 0;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.insta_hov:hover {
-  opacity: 1;
-}
-
-/* * * * * * * * *
-*	footer
-* * * * * * * * */
-.main_contact {
-  text-align: center;
-}
-
-.main_con_i {
-  width: 150px;
-  margin-bottom: 15px;
-}
-
-.main_con_p {
-  letter-spacing: .8rem;
-  font-size: 2rem;
-  margin-bottom: 100px;
-}
-
-.main_con_i_1 {
-  width: 960px;
-  height: 553px;
-  background-image: url(../img/kari/coffee.jpg);
-  background-size: cover;
-  background-position: center bottom 23%;
-  float: left;
-}
-
-.main_con_i_2 {
-  width: 960px;
-  height: 553px;
-  background-image: url(../img/kari/cakea.jpg);
-  background-size: cover;
-  background-position: center bottom 30%;
-  float: left;
-}
-
-.clear {
-  clear: both;
-}
-
-.con_3 {
-  width: 280px;
-}
-
-.con_4 {
-  border-top: 3px solid #000;
-}
-
-/* * * * * * * * *
-*	footer
-* * * * * * * * */
-footer {
-  text-align: center;
-  margin: 30px 0;
-  font-size: 1.4rem;
-}
-
-/* * * * * * * * *
-*	共通事項
-* * * * * * * * */
-/*	button 右に横棒がついているもの
--------------------------------*/
-.btn-3 a {
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  padding: 1em 2em;
-  width: 300px;
-  color: #333;
-  font-size: 1.6rem;
-  background-color: white;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.btn-3 a::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: -35px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 70px;
-  height: 2px;
-  background-color: #2285b1;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.btn-3 a:hover {
-  text-decoration: none;
-  background-color: #ccc;
-}
-
-.btn-3 a:hover::after {
-  -webkit-transform: translateX(5px);
-          transform: translateX(5px);
-}
-
-/*	btn-4 白から黒
--------------------------------*/
-.btn-4 a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0 auto;
-  padding: 1em 2em;
-  width: 300px;
-  color: #000000;
-  font-size: 18px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  border: 4px solid #000000;
-}
-
-.btn-4 a::after {
-  content: '';
-  width: 5px;
-  height: 5px;
-  border-top: 3px solid #333;
-  border-right: 3px solid #333;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-.btn-4 a:hover {
-  color: #fff;
-  text-decoration: none;
-  background-color: #333;
-}
-
-.btn-4 a:hover::after {
-  border-top: 3px solid #fff;
-  border-right: 3px solid #fff;
-}
-
-/*	btn-5 main_contact 共通
--------------------------------*/
-.btn-5 a {
-  display: block;
-  position: relative;
-  margin: 0 auto;
-  padding: 8em 8em;
-  width: 1080px;
-  color: #000;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-  border: 10px solid #000;
-  margin-top: -70px;
-  margin-bottom: 100px;
-}
-
-.btn-5 h3 {
-  font-size: 4.5rem;
-  padding-right: 40px;
-}
-
-.btn-5 .con_2 {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.con_1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.btn-5 a::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  right: -120px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  width: 240px;
-  height: 3px;
-  background-color: #000;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-.btn-5 a:hover {
-  text-decoration: none;
-  background-color: #000;
-  color: #fff;
-}
-
-.btn-5 a:hover::after {
-  -webkit-transition: all .5s;
-  transition: all .5s;
-  text-decoration: none;
-  background-color: #fff;
-}
-
-/* * * * * * * * *
-*	hover
-* * * * * * * * */
-/*	画像
--------------------------------*/
-.hov {
-  opacity: 1;
-  -webkit-transition: opacity 200ms ease-out;
-  transition: opacity 200ms ease-out;
-}
-
-.hov:hover {
-  opacity: .55;
-  text-decoration: none;
-}
-
-/*	nav white -> black
--------------------------------*/
-.hov_nav_w {
-  opacity: 1;
-  -webkit-transition: opacity 0.5s ease-out;
-  transition: opacity 0.5s ease-out;
-}
-
-.hov_nav_w:hover {
-  color: #000;
-  text-decoration: none;
-}
-
-/*	transition 0.3s
--------------------------------*/
-.hov_03 {
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-/* * * * * * * * *
-*	header
-* * * * * * * * */
-.head-img {
+.head-bg-img {
   width: 100%;
   height: 900px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(53, 37, 37, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/header.jpg);
+  background: linear-gradient(rgba(53, 37, 37, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/header.jpg);
   background-size: cover;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/header.jpg);
-  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/header.jpg);
 }
 
 /* * * * * * * * *
@@ -619,4 +238,20 @@ footer {
 /* * * * * * * * *
 *	photo
 * * * * * * * * */
+#photo_inner img {
+  margin-bottom: 100px;
+}
+
+/*   shop top
+--------------------------------------------------------------------------*/
+/* * * * * * * * *
+*	shop top
+* * * * * * * * */
+.head-bg-img-shop {
+  width: 100%;
+  height: 600px;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/shop1.jpg);
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/shop1.jpg);
+  background-size: cover;
+}
 /*# sourceMappingURL=style.css.map */
