--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,5 +5,5 @@
 $ucafe-color: #F5F8F6;
 $u-green: #648181;
 $u-litegreen: #bfcdcc;
-$btn4-1 : #665957;
-$ftr-1: #333;
+$btn4-1 : #36374b;
+$ftr-1: #36374b;
