ショッピングカートの途中
あと少し

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -7,3 +7,8 @@ $u-green: #648181;
 $u-litegreen: #bfcdcc;
 $btn4-1 : #36374b;
 $ftr-1: #36374b;
+// shopping カート
+$atr : #8aa2a0;
+$atr2: #bee0ce;
+$back1 : #989999;
+$back2 :#e3e4e0;
