--- a/css/preset.scss
+++ b/css/preset.scss
@@ -6,7 +6,7 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
-html { font-size: 62.5%; }
+html { font-size: 50%; }
 img { max-width: 100%; }
 body {
   color: #333;
@@ -278,6 +278,87 @@ footer {
   background-color: #fff;
 }
 
+/*	btn-6 shoping CHEESECAKE 他の
+-------------------------------*/
+.btn-6 a {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 500px;
+  color: #fff;
+  font-size: 18px;
+  border: 1px solid #fff;
+  // font-weight: 700;
+  background-color: $atr;
+  transition: 0.3s;
+}
+
+.btn-6 a::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  right: -35px;
+  transform: translateY(-50%);
+  width: 70px;
+  height: 2px;
+  background-color: #e5e5e5;
+  transition: 0.3s;
+}
+
+.btn-6 a:hover {
+  text-decoration: none;
+  background-color: $ucafe-color;
+  border: 1px solid $btn4-1;
+  color: #adabae;
+}
+
+.btn-6 a:hover::after {
+  transform: translateX(3px);
+  background-color: $btn4-1;
+}
+/*	btn-7 shoping 戻る
+-------------------------------*/
+.btn-7 a {
+  text-align: center;
+  display: block;
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 2em;
+  width: 500px;
+  color: #333;
+  font-size: 18px;
+  border: 1px solid #333;
+  // font-weight: 700;
+  background-color: #fff;
+  transition: 0.3s;
+}
+
+.btn-7 a::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -35px;
+  transform: translateY(-50%);
+  width: 70px;
+  height: 1px;
+  background-color: $btn4-1;
+  transition: 0.3s;
+}
+
+.btn-7 a:hover {
+  text-decoration: none;
+  background-color: $btn4-1;
+  border: 1px solid #333;
+  color: #fff;
+}
+
+.btn-7 a:hover::after {
+  transform: translateX(3px);
+  background-color: #fff;
+}
+
 /* * * * * * * * *
 *	hover
 * * * * * * * * */
@@ -320,6 +401,24 @@ footer {
 .hov_03 {
   transition: 0.3s;
 }
+/*	画像 マウスオーバー時拡大（明るく）
+-------------------------------*/
+.img-hov-1 {
+	overflow: hidden;	/*拡大時にはみ出た部分を隠す*/
+}
+.img-hov-1 img,.img-hov-1 p {
+	display: block;
+	transition-duration: 0.5s;	/*変化に掛かる時間*/
+}
+.img-hov-1 img:hover {
+	transform: scale(1.1);	/*画像の拡大率*/
+	transition-duration: 0.5s;	/*変化に掛かる時間*/
+  opacity: 0.6;	/* 小さくするほど暗くなります */
+  .img-hov-1 p {
+    opacity: 0.6;
+  }
+}
+
 /* * * * * * * * *
 *	その他共通
 * * * * * * * * */
@@ -361,7 +460,7 @@ footer {
   line-height: 3.5;
 }
 /* * * * * * * * *
-*	border bdr-1
+*	border bdr-1 CHEESECAKE
 * * * * * * * * */
 .bdr-1 {
 	display: flex;
@@ -383,5 +482,30 @@ footer {
 	margin-right: 50px;
 }
 .bdr-1::after {
+	margin-left: 50px;
+}
+/* * * * * * * * *
+*	border bdr-2 COOKIE
+* * * * * * * * */
+.bdr-2 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 26px;
+	text-align: center;
+}
+
+.bdr-2::before,
+.bdr-2::after {
+	content: '';
+	width: 280px;
+	height: 1px;
+	background-color: #e3bf00;
+}
+
+.bdr-2::before {
+	margin-right: 50px;
+}
+.bdr-2::after {
 	margin-left: 50px;
 }
