--- a/css/style.scss
+++ b/css/style.scss
@@ -211,25 +211,172 @@
     margin-top: 130px;
   }
   .shop-ti {
-    margin-top: 150px;
+    margin-top: 200px;
     margin-bottom: 80px;
     font-size: 2rem;
   }
   .shop-items {
     .sp-item {
-      img {
-        width: 460px;
-        height: 460px;
-        margin-bottom: 30px;
-      }
-      .sp-item-ti {
-        font-size: 1.7em;
-      }
-      .sp-item-ti-2 {
-        margin-top: 10px;
-        font-size: 1.4em;
-        color: #b4b4b4;
+      margin-bottom: 150px;
+      .sp-item-dd {
+        .siz {
+          width: 460px;
+          height: 460px;
+          margin-bottom: 30px;
+        }
+        .sp-item-ti {
+          font-size: 1.7em;
+        }
+        .sp-item-ti-2 {
+          margin-top: 10px;
+          font-size: 1.4em;
+          color: #b4b4b4;
+        }
       }
     }
+  }
+}
+
+/* * * * * * * * *
+*	shop-sp-PLANE
+* * * * * * * * */
+.shop-ti-big {
+  height: 68px;
+  margin-top: -80px;
+  background-color: $ucafe-color;
+  .shop-ti-big-p {
+    font-size: 2rem;
+    letter-spacing: 1.2rem;
+    font-weight: bold;
+  }
+}
+.sp-dt-main {
+  margin-bottom: 80px;
+  margin-top: 100px;
+  .sp-dt-sub1 {
+    .sp-dt-sub-d1 {
+      margin-right: 20px;
+      img {
+        width: 125px;
+        height: 125px;
+        margin-bottom: 10px;
+      }
+    }
+    .sp-dt-sub-d2 {
+      width: 395px;
+      height: 395px;
+      background-color: #333;
+    }
+  }
+  .sp-dt-sub2 {
+    width: 500px;
+    .sp-dt-name {
+      font-size: 1.8rem;
+    }
+    .sp-dt-name2 {
+      margin-bottom: 20px;
+      font-size: 1.4rem;
+    }
+    .dt-price {
+      width: 200px;
+      height: 40px;
+      line-height: 40px;
+      font-size: 1.5rem;
+      margin-bottom: 20px;
+    }
+    .dt-size {
+      .dt-size-ti {
+        font-size: 1.6rem;
+      }
+    }
+    .dt-size-dt {
+      margin-bottom: 20px;
+      .dt-size {
+        margin-right: 20px;
+        text-align: center;
+        width: 80px;
+        height: 40px;
+        line-height: 40px; //heightと連動
+        font-size: 1.5rem;
+        border: solid 1px #333;
+        letter-spacing: 0;
+      }
+    }
+    .dt-text {
+      font-size: 1.5rem;
+    }
+  }
+}
+.btn-7 {
+  margin-top: 30px;
+  margin-bottom: 130px;
+}
+/* * * * * * * * *
+*	Shopping cart
+* * * * * * * * */
+.bl {
+  background: #d5dbe4;
+}
+.cart_a {
+  .cart_b {
+    margin-top: 80px;
+    margin-bottom: 40px;
+    border-bottom: 1px solid #333;
+    ul {
+      justify-content: flex-end;
+      font-size: 1.6rem;
+      li {
+        display: inline-block;
+        text-align: center;
+        width: 100px;
+        margin-left: 70px;
+        letter-spacing: 1rem;
+      }
+    }
+  }
+  .cart_item {
+    max-width: 1080px;
+    img {
+      width: 200px;
+      height: 200px;
+      margin-right: 50px;
+    }
+    .cart_e {
+      padding-top: 30px;
+      .cart_1 {
+        font-size: 1.8rem;
+        font-weight: 500;
+      }
+      .cart_2 {
+        font-size: 1.5rem;
+        margin-top: 10px;
+      }
+      .cart_3 {
+        border: 1px solid #333;
+        width: 73px;
+        height: 40px;
+        line-height: 40px;
+        letter-spacing: normal;
+        text-align: center;
+        margin-top: 65px;
+      }
+    }
+    .cart_e-0 {
+      .cc1 {
+        margin-top: 30px;
+        text-align: center;
+        width: 100px;
+        height: 200px;
+        margin-left: 70px;
+      }
+    }
+  }
+  .cart_f {
+    margin-top: 30px;
+  }
+  .cart_g {
+    border: 1px solid #333;
+    width: 600px;
+    height: 220px;
   }
 }
