--- a/css/preset.scss
+++ b/css/preset.scss
@@ -12,7 +12,7 @@ body {
   color: #333;
   font-family:'PT Sans Caption','PT Sans','ヒラギノ角ゴ Pro W3',' Hiragino Kaku Gothic Pro', 'MeiryoUI', 'MSUIGothic', 'メイリオ', 'Meiryo', 'ＭＳＰゴシック', sans-serif;
   line-height: 1.8;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.2rem;
   margin: 0;
 }
 .container {
@@ -22,6 +22,7 @@ body {
 .inner {
   max-width: 1080px;
   margin: 0 auto;
+  padding: 0 40px;
 }
 ul {
   list-style: none;
@@ -33,7 +34,7 @@ a {
 }
 h2 {
   font-size: 4.5rem;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 /* * * * * * * * *
@@ -48,24 +49,30 @@ img {
 .sub_t {
   font-size: 2rem;
   letter-spacing: 1.2rem;
-  margin-bottom: 80px;
+  margin-bottom: 30px;
 }
 
 /* * * * * * * * *
 *	header
 * * * * * * * * */
 header {
-  .inner {
-    .nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      height: 105px;
-      h1 img {
-        width: 180px;
-        height: 60px;
-      }
-    }
+  .header_under {
+    border-bottom: 1px solid #333;
+    height: 90px;
+  }
+  .header_under_indx {
+    border-bottom: 1px solid #fff;
+  }
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90px;
+  img {
+    width: 180px;
+    height: 60px;
   }
 }
 // nav
@@ -80,6 +87,7 @@ header {
       margin-right: 30px;
         img {
           width: 20px;
+          height: 20px;
         }
     }
   }
@@ -94,10 +102,18 @@ header {
     opacity: 1;
   }
 }
-// navの下線
-.nav-border {
-  border-bottom: solid 1px #000;
-  margin-bottom: 150px;
+
+/*	shopping header
+-------------------------------*/
+.shop-ti-big {
+  height: 68px;
+  margin-top: 20px;
+  background-color: $ucafe-color;
+  .shop-ti-big-p {
+    font-size: 2rem;
+    letter-spacing: 1.2rem;
+    font-weight: bold;
+  }
 }
 
 /* * * * * * * * *
@@ -115,13 +131,16 @@ header {
   font-size: 2rem;
   margin-bottom: 100px;
 }
+.main_cons {
+  text-align: center;
+}
 .main_con_i_1 {
   width: 960px;
   height: 553px;
   background-image: url(../img/kari/coffee.jpg);
   background-size: cover;
   background-position : center bottom 23%;
-  float: left;
+  // float: left;
 }
 .main_con_i_2 {
   width: 960px;
@@ -129,7 +148,7 @@ header {
   background-image: url(../img/kari/cakea.jpg);
   background-size: cover;
   background-position : center bottom 30%;
-  float: left;
+  // float: left;
 }
 .clear {
   clear: both;
@@ -161,9 +180,9 @@ footer {
   position: relative;
   margin: 0 auto;
   padding: 1em 2em;
-  width: 300px;
+  width: 230px;
   color: #333;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   // font-weight: 700;
   background-color: rgb(255, 255, 255);
   transition: 0.3s;
@@ -198,9 +217,9 @@ footer {
   align-items: center;
   margin: 0 auto;
   padding: 1em 2em;
-  width: 300px;
+  width: 200px;
   color: $btn4-1;
-  font-size: 18px;
+  font-size: 1.4rem;
   // font-weight: 700;
   transition: 0.3s;
   border: 4px solid $btn4-1;
@@ -418,6 +437,52 @@ footer {
     opacity: 0.6;
   }
 }
+/* misaki
+-------------------------------------------------------------*/
+
+.hov {
+	opacity: 1;
+	transition: opacity 200ms ease-out;
+	transition: all .8s;
+	&:hover {
+		opacity: 0.5;
+		text-decoration: none;
+	}
+}
+.gallery {
+	a {
+		.txt {
+			.pp {
+				padding-bottom: 10px;
+				margin-top: 20px;
+			}
+		}
+		figure {
+			overflow: hidden;
+			img {
+				transition-duration: 0.8s;
+				&:hover {
+					transform: scale(1.1);
+					transition-duration: 0.8s;
+				}
+			}
+		}
+	}
+}
+.d-b {
+  display: block;
+}
+.view.view-slideup {
+	opacity: 0;
+	&.on {
+		opacity: 1;
+		animation: view-slideup 2s ease both;
+  }
+}
+
+
+
+
 
 /* * * * * * * * *
 *	その他共通
