--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,14 @@
 * * * * * * * * */
 .head-bg-img {
   width: 100%;
-  height: 900px;
+  height: 700px;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(53, 37, 37, 0.2)), to(rgba(0, 0, 0, 0.2))), url(../img/kari/header.jpg);
   background: linear-gradient(rgba(53, 37, 37, 0.2), rgba(0, 0, 0, 0.2)), url(../img/kari/header.jpg);
   background-size: cover;
+}
+
+.header_under_index-bk {
+  border-bottom: 1px solid #000;
 }
 
 /* * * * * * * * *
@@ -18,6 +22,7 @@
 * * * * * * * * */
 #aboutus {
   margin-top: 90px;
+  padding: 0 20px;
 }
 
 #aboutus h2 {
@@ -42,8 +47,8 @@
 }
 
 #aboutus_a #aboutus_img img {
-  width: 260px;
-  height: 340px;
+  width: 200px;
+  height: 280px;
   margin-right: 15px;
 }
 
@@ -79,6 +84,8 @@
 #news {
   background-color: #F5F8F6;
   margin-top: 200px;
+  margin-left: 50px;
+  margin-right: 50px;
   padding: 60px;
 }
 
@@ -111,10 +118,11 @@
 * * * * * * * * */
 #photo {
   margin-top: 200px;
+  padding: 0 20px;
 }
 
 #photo h2 {
-  margin-bottom: 35px;
+  margin-bottom: 20px;
   text-align: center;
 }
 
@@ -139,21 +147,25 @@
 }
 
 #photo_b img {
-  width: 310px;
+  width: 280px;
   margin-bottom: 37px;
-  height: 310px;
+  height: 280px;
 }
 
 /* * * * * * * * *
 *	main Online shop
 * * * * * * * * */
 #online_s {
-  margin: 250px 0;
+  margin: 150px 0;
   padding-top: 30px;
   background-color: #F5F8F6;
 }
 
-#online_s #onl_p {
+#online_s .i-pp {
+  padding: 0 50px;
+}
+
+#online_s .i-pp #onl_p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -163,22 +175,22 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 70px 50px 0 0;
+  margin: 20px 50px 0 0;
   padding-bottom: 70px;
 }
 
-#online_s #onl_p img {
-  width: 500px;
-  height: 320px;
+#online_s .i-pp #onl_p img {
+  width: 450px;
+  height: 300px;
 }
 
-#online_s #onl_p #onl_pp {
-  font-size: 1.7rem;
+#online_s .i-pp #onl_p #onl_pp {
+  font-size: 1.4rem;
   line-height: 2.5;
   text-align: center;
 }
 
-#online_s #onl_p #onl_pp p {
+#online_s .i-pp #onl_p #onl_pp p {
   margin-bottom: 40px;
 }
 
@@ -188,7 +200,7 @@
 #access {
   margin-bottom: 200px;
   line-height: 2.3;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
 }
 
 #access #acc_a {
@@ -212,7 +224,7 @@
 #access #acc_a #a_p3 {
   margin-top: 35px;
   font-weight: bold;
-  font-size: 1.6em;
+  font-size: 1.4em;
 }
 
 #access #acc_a a {
@@ -229,8 +241,13 @@
 }
 
 #access img {
-  width: 400px;
+  width: 280px;
+  height: 400px;
   margin: 200px 0 0 120px;
+}
+
+#access .map_a {
+  margin-top: 20px;
 }
 
 /*   photo
@@ -266,40 +283,36 @@
 }
 
 #shop_inner .shop-items .sp-item {
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
-#shop_inner .shop-items .sp-item .sp-item-dd .siz {
-  width: 460px;
-  height: 460px;
-  margin-bottom: 30px;
+#shop_inner .shop-items .sp-item .sp-item-d article {
+  margin: 0 10 0 10;
 }
 
-#shop_inner .shop-items .sp-item .sp-item-dd .sp-item-ti {
-  font-size: 1.7em;
+#shop_inner .shop-items .sp-item .sp-item-d article a figure img {
+  width: 400px;
+  height: 400px;
 }
 
-#shop_inner .shop-items .sp-item .sp-item-dd .sp-item-ti-2 {
-  margin-top: 10px;
-  font-size: 1.4em;
+#shop_inner .shop-items .sp-item .sp-item-d article a .txt .pp {
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+
+#shop_inner .shop-items .sp-item .sp-item-d article a .txt .sp-item-ti-2 {
+  font-size: 1.5rem;
   color: #b4b4b4;
 }
 
+article {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
 /* * * * * * * * *
-*	shop-sp-PLANE
+*
 * * * * * * * * */
-.shop-ti-big {
-  height: 68px;
-  margin-top: -80px;
-  background-color: #F5F8F6;
-}
-
-.shop-ti-big .shop-ti-big-p {
-  font-size: 2rem;
-  letter-spacing: 1.2rem;
-  font-weight: bold;
-}
-
 .sp-dt-main {
   margin-bottom: 80px;
   margin-top: 100px;
@@ -374,7 +387,7 @@
 *	Shopping cart
 * * * * * * * * */
 .bl {
-  background: #d5dbe4;
+  background: #FFF9ED;
 }
 
 .cart_a .cart_b {
