--- a/css/preset.css
+++ b/css/preset.css
@@ -315,7 +315,7 @@ footer {
 
 .btn-5 .con_2 {
   font-size: 2rem;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .con_1 {
@@ -354,7 +354,7 @@ footer {
   -webkit-transition: all .5s;
   transition: all .5s;
   text-decoration: none;
-  background-color: #fff;
+  background-color: #f4f3ef;
 }
 
 /*	btn-6 shoping CHEESECAKE 他の
@@ -365,9 +365,9 @@ footer {
   position: relative;
   margin: 0 auto;
   padding: 1em 2em;
-  width: 500px;
+  width: 380px;
   color: #fff;
-  font-size: 18px;
+  font-size: 1.6rem;
   border: 1px solid #fff;
   background-color: #8aa2a0;
   -webkit-transition: 0.3s;
@@ -382,7 +382,7 @@ footer {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   width: 70px;
-  height: 2px;
+  height: 1px;
   background-color: #e5e5e5;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -409,9 +409,9 @@ footer {
   position: relative;
   margin: 0 auto;
   padding: 1em 2em;
-  width: 500px;
+  width: 380px;
   color: #333;
-  font-size: 18px;
+  font-size: 1.6rem;
   border: 1px solid #333;
   background-color: #fff;
   -webkit-transition: 0.3s;
@@ -442,7 +442,7 @@ footer {
 .btn-7 a:hover::after {
   -webkit-transform: translateX(3px);
           transform: translateX(3px);
-  background-color: #fff;
+  background-color: #f4f3ef;
 }
 
 /* * * * * * * * *
@@ -606,6 +606,12 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.ai-fe {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .fd-c {
