--- a/css/style.css
+++ b/css/style.css
@@ -311,11 +311,15 @@ article {
 }
 
 /* * * * * * * * *
-*
+*shoping 詳細ページ
 * * * * * * * * */
 .sp-dt-main {
   margin-bottom: 80px;
   margin-top: 100px;
+}
+
+.sp-dt-main .sp-dt-sub1 {
+  margin-right: 20px;
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d1 {
@@ -329,13 +333,14 @@ article {
 }
 
 .sp-dt-main .sp-dt-sub1 .sp-dt-sub-d2 {
-  width: 395px;
-  height: 395px;
+  width: 350px;
+  height: 350px;
   background-color: #333;
 }
 
 .sp-dt-main .sp-dt-sub2 {
-  width: 500px;
+  margin-left: 20px;
+  width: 450px;
 }
 
 .sp-dt-main .sp-dt-sub2 .sp-dt-name {
@@ -357,6 +362,10 @@ article {
 
 .sp-dt-main .sp-dt-sub2 .dt-size .dt-size-ti {
   font-size: 1.6rem;
+}
+
+.sp-dt-main .sp-dt-sub2 .dt-size .dt-size-po {
+  margin-left: 100px;
 }
 
 .sp-dt-main .sp-dt-sub2 .dt-size-dt {
@@ -453,13 +462,27 @@ article {
   margin-left: 70px;
 }
 
-.cart_a .cart_f {
+.cart_f {
   margin-top: 30px;
 }
 
-.cart_a .cart_g {
+.cart_g {
   border: 1px solid #333;
   width: 600px;
   height: 220px;
+}
+
+.cart_h {
+  border-bottom: 1px solid #000;
+  width: 300px;
+}
+
+.cart_i {
+  margin-top: 80px;
+  width: 270px;
+}
+
+.cart_i .ww a {
+  width: 270px;
 }
 /*# sourceMappingURL=style.css.map */
